samples/_failures_safe/1761614012_b08760_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77517981.c: In function ‘print_token’:
./samples/SAFE/__tmp_77517981.c:164:12: error: missing terminating " character
  164 |     printf("Line %
      |            ^~~~~~~
./samples/SAFE/__tmp_77517981.c:164:5: error: expected expression at end of input
  164 |     printf("Line %
      |     ^~~~~~
./samples/SAFE/__tmp_77517981.c:164:5: error: expected declaration or statement at end of input
